[build-system]
requires = [
    "setuptools >= 57",
#    "setuptools_scm[toml] >= 6.0",
#    "setuptools_scm_git_archive",
    "wheel >= 0.36.2"
]
build-backend = 'setuptools.build_meta'

#[tool.setuptools_scm]
#write_to = "scottbrian_paratools/version.py"
#git_describe_command = "git_describe --dirty --tags --long --match v* --first-parent"