[project]
name = "scottbrian_paratools"
version = "1.0.0"
description = "Thread messaging and coordination"
readme = "README.rst"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
keywords = ["parallel", "message", "wait", "sync"]
authors = [{name = "Scott Tuttle", email = "sbtuttle@outlook.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows :: Windows 10"]
dependencies = [
    "typing_extensions",
    "scottbrian-utils",
#    "scottbrian-locking",
    "scottbrian_locking @  file://C:/Users/Tiger/PycharmProjects/scottbrian_locking/dist/scottbrian_locking-2.0.0-py3-none-any.whl",
]

[tool.setuptools]
packages = ["scottbrian_paratools"]
package-dir = {"" = "src"}

[project.urls]
Documentation = "https://scottbrian-paratools.readthedocs.io/en/latest/"
Source = "https://github.com/ScottBrian/scottbrian_paratools.git"

[build-system]
requires = [
    "setuptools >= 69.0.0",
#    "setuptools_scm[toml] >= 6.0",
#    "setuptools_scm_git_archive",
    "wheel >= 0.41.3"
]
build-backend = 'setuptools.build_meta'

#[tool.setuptools_scm]
#write_to = "scottbrian_paratools/version.py"
#git_describe_command = "git_describe --dirty --tags --long --match v* --first-parent"