[metadata]
name = scottbrian_paratools
description = Parallel processing tools
long_description = file: README.rst
long_description_content_type = text/x-rst
version = 1.0.0
url = https://github.com/ScottBrian/scottbrian_paratools.git
author = Scott Tuttle
author_email = sbtuttle@outlook.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Recovery Tools
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
project_urls =
    Documentation =  https://scottbrian-paratools.readthedocs.io/en/latest/
    Source = https://github.com/ScottBrian/scottbrian_paratools.git

[options]
zip_safe = False
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    typing-extensions
    scottbrian-locking
    scottbrian-utils
;    scottbrian-utils @ file://localhost/Users/Tiger/PycharmProjects/scottbrian_utils#egg=scottbrian-utils
;    scottbrian-utils @ file://localhost/Users/Tiger/PycharmProjects/scottbrian_utils/dist/scottbrian_utils-2.4.0-py2.py3-none-any.whl
;    scottbrian-utils @ file://localhost/home/Tiger/PycharmProjects/scottbrian_utils#egg=scottbrian-utils
;    scottbrian-utils @ https://github.com/ScottBrian/scottbrian_utils.git
;dependency_links = https://github.com/ScottBrian/scottbrian_utils.git
python_requires = >=3.11
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

;[options.extras_require]
;scottbrian_paratools =
;    __init__pyi
;    py.typed
